--- a/dbfilter_from_header/i18n/dbfilter_from_header.pot
+++ b/dbfilter_from_header/i18n/dbfilter_from_header.pot
@@ -1,12 +1,10 @@
-# Translation of OpenERP Server.
+# Translation of Odoo Server.
 # This file contains the translation of the following modules:
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: OpenERP Server 7.0\n"
+"Project-Id-Version: Odoo Server 11.0\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2014-03-14 17:40+0000\n"
-"PO-Revision-Date: 2014-03-14 17:40+0000\n"
 "Last-Translator: <>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
