--- a/datetime_formatter/i18n/pt.po
+++ b/datetime_formatter/i18n/pt.po
@@ -6,21 +6,23 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Odoo Server 12.0\n"
 "Report-Msgid-Bugs-To: \n"
-"Last-Translator: <>\n"
-"Language-Team: \n"
+"PO-Revision-Date: 2019-08-14 12:44+0000\n"
+"Last-Translator: Pedro Castro Silva <pedrocs@exo.pt>\n"
+"Language-Team: none\n"
+"Language: pt\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: \n"
-"Plural-Forms: \n"
+"Plural-Forms: nplurals=2; plural=n > 1;\n"
+"X-Generator: Weblate 3.7.1\n"
 
 #. module: datetime_formatter
 #: code:addons/datetime_formatter/models/res_lang.py:59
 #, python-format
 msgid "Best matched language (%s) not found."
-msgstr ""
+msgstr "O idioma com maior afinidade (%s) não foi encontrado."
 
 #. module: datetime_formatter
 #: model:ir.model,name:datetime_formatter.model_res_lang
 msgid "Languages"
-msgstr ""
-
+msgstr "Idiomas"
