--- a/datetime_formatter/i18n/zh_CN.po
+++ b/datetime_formatter/i18n/zh_CN.po
@@ -6,21 +6,23 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Odoo Server 12.0\n"
 "Report-Msgid-Bugs-To: \n"
-"Last-Translator: <>\n"
-"Language-Team: \n"
+"PO-Revision-Date: 2019-08-31 05:07+0000\n"
+"Last-Translator: 黎伟杰 <674416404@qq.com>\n"
+"Language-Team: none\n"
+"Language: zh_CN\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: \n"
-"Plural-Forms: \n"
+"Plural-Forms: nplurals=1; plural=0;\n"
+"X-Generator: Weblate 3.8\n"
 
 #. module: datetime_formatter
 #: code:addons/datetime_formatter/models/res_lang.py:59
 #, python-format
 msgid "Best matched language (%s) not found."
-msgstr ""
+msgstr "未找到最佳匹配语言（%s）。"
 
 #. module: datetime_formatter
 #: model:ir.model,name:datetime_formatter.model_res_lang
 msgid "Languages"
-msgstr ""
-
+msgstr "语言"
