--- a/base_remote/i18n/base_remote.pot
+++ b/base_remote/i18n/base_remote.pot
@@ -1,12 +1,12 @@
 # Translation of Odoo Server.
 # This file contains the translation of the following modules:
-#	* base_remote
+# 	* base_remote
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: Odoo Server 12.0\n"
+"Project-Id-Version: Odoo Server 13.0\n"
 "Report-Msgid-Bugs-To: \n"
-"Last-Translator: <>\n"
+"Last-Translator: \n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -16,6 +16,26 @@ msgstr ""
 #. module: base_remote
 #: model:ir.model,name:base_remote.model_base
 msgid "Base"
+msgstr ""
+
+#. module: base_remote
+#: model:ir.model.fields,field_description:base_remote.field_res_remote__changeset_change_ids
+msgid "Changeset Changes"
+msgstr ""
+
+#. module: base_remote
+#: model:ir.model.fields,field_description:base_remote.field_res_remote__changeset_ids
+msgid "Changesets"
+msgstr ""
+
+#. module: base_remote
+#: model:ir.model.fields,field_description:base_remote.field_res_remote__count_pending_changeset_changes
+msgid "Count Pending Changeset Changes"
+msgstr ""
+
+#. module: base_remote
+#: model:ir.model.fields,field_description:base_remote.field_res_remote__count_pending_changesets
+msgid "Count Pending Changesets"
 msgstr ""
 
 #. module: base_remote
@@ -39,7 +59,7 @@ msgid "Hostname"
 msgstr ""
 
 #. module: base_remote
-#: sql_constraint:res.remote:0
+#: model:ir.model.constraint,message:base_remote.constraint_res_remote_name_unique
 msgid "Hostname must be unique"
 msgstr ""
 
@@ -92,7 +112,11 @@ msgid "Shows if the remote can be found through the socket"
 msgstr ""
 
 #. module: base_remote
+#: model:ir.model.fields,field_description:base_remote.field_res_remote__user_can_see_changeset
+msgid "User Can See Changeset"
+msgstr ""
+
+#. module: base_remote
 #: model:ir.model,name:base_remote.model_res_users
 msgid "Users"
 msgstr ""
-
