--- a/datetime_formatter/i18n/datetime_formatter.pot
+++ b/datetime_formatter/i18n/datetime_formatter.pot
@@ -1,12 +1,12 @@
 # Translation of Odoo Server.
 # This file contains the translation of the following modules:
-#	* datetime_formatter
+# 	* datetime_formatter
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: Odoo Server 12.0\n"
+"Project-Id-Version: Odoo Server 13.0\n"
 "Report-Msgid-Bugs-To: \n"
-"Last-Translator: <>\n"
+"Last-Translator: \n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -14,7 +14,7 @@ msgstr ""
 "Plural-Forms: \n"
 
 #. module: datetime_formatter
-#: code:addons/datetime_formatter/models/res_lang.py:59
+#: code:addons/datetime_formatter/models/res_lang.py:0
 #, python-format
 msgid "Best matched language (%s) not found."
 msgstr ""
@@ -23,4 +23,3 @@ msgstr ""
 #: model:ir.model,name:datetime_formatter.model_res_lang
 msgid "Languages"
 msgstr ""
-
