--- a/base_changeset/i18n/es.po
+++ b/base_changeset/i18n/es.po
@@ -6,12 +6,13 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Odoo Server 13.0\n"
 "Report-Msgid-Bugs-To: \n"
-"Last-Translator: \n"
-"Language-Team: \n"
+"Last-Translator: Automatically generated\n"
+"Language-Team: none\n"
+"Language: es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: \n"
-"Plural-Forms: \n"
+"Plural-Forms: nplurals=2; plural=n != 1;\n"
 
 #. module: base_changeset
 #: model:ir.model.constraint,message:base_changeset.constraint_changeset_field_rule_model_field_uniq
@@ -1091,8 +1092,11 @@ msgstr ""
 #. module: base_changeset
 #: model:ir.model.fields,help:base_changeset.field_changeset_field_rule__source_model_id
 msgid ""
-"If a source model is defined, the rule will be applied only when the change is made from this origin.  Rules without source model are global and applies to all backends.\n"
-"Rules with a source model have precedence over global rules, but if a field has no rule with a source model, the global rule is used."
+"If a source model is defined, the rule will be applied only when the change "
+"is made from this origin.  Rules without source model are global and applies "
+"to all backends.\n"
+"Rules with a source model have precedence over global rules, but if a field "
+"has no rule with a source model, the global rule is used."
 msgstr ""
 
 #. module: base_changeset
@@ -1405,7 +1409,8 @@ msgstr ""
 #: code:addons/base_changeset/models/record_changeset_change.py:0
 #, python-format
 msgid ""
-"This change cannot be applied because a previous changeset for the same record is pending.\n"
+"This change cannot be applied because a previous changeset for the same "
+"record is pending.\n"
 "Apply all the anterior changesets before applying this one."
 msgstr ""
 
