--- a/base_exception/i18n/es.po
+++ b/base_exception/i18n/es.po
@@ -4,25 +4,16 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: Odoo Server 15.0\n"
+"Project-Id-Version: Odoo Server 17.0\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-06-28 22:06+0000\n"
-"PO-Revision-Date: 2023-09-03 00:15+0000\n"
-"Last-Translator: Ivorra78 <informatica@totmaterial.es>\n"
+"POT-Creation-Date: 2023-11-17 12:53+0000\n"
+"PO-Revision-Date: 2023-11-17 12:53+0000\n"
+"Last-Translator: \n"
 "Language-Team: \n"
-"Language: es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: \n"
-"Plural-Forms: nplurals=2; plural=n != 1;\n"
-"X-Generator: Weblate 4.17\n"
-
-#. module: base_exception
-#. odoo-python
-#: code:addons/base_exception/models/base_exception.py:0
-#, python-format
-msgid "(Blocking exception)"
-msgstr "(Excepción de bloqueo)"
+"Plural-Forms: \n"
 
 #. module: base_exception
 #: model_terms:ir.ui.view,arch_db:base_exception.view_exception_rule_form
@@ -69,14 +60,12 @@ msgstr "Código python"
 msgid ""
 "By python code: allow to define any arbitrary check\n"
 "By domain: limited to a selection by an odoo domain:\n"
-"           performance can be better when exceptions           are evaluated "
-"with several records\n"
+"           performance can be better when exceptions           are evaluated with several records\n"
 "By method: allow to select an existing check method"
 msgstr ""
 "Por código python: permite definir cualquier comprobación arbitraria\n"
 "Por dominio: limitado a una selección por un dominio odoo:\n"
-"           el rendimiento puede ser mejor cuando las excepciones se evalúan "
-"con varios registros\n"
+"           el rendimiento puede ser mejor cuando las excepciones se evalúan con varios registros\n"
 "Por método: permite seleccionar un método de comprobación existente"
 
 #. module: base_exception
@@ -87,7 +76,7 @@ msgstr "Creado por"
 #. module: base_exception
 #: model:ir.model.fields,field_description:base_exception.field_exception_rule__create_date
 msgid "Created on"
-msgstr "Creado el"
+msgstr "Creado en"
 
 #. module: base_exception
 #: model:ir.model.fields,field_description:base_exception.field_exception_rule__description
@@ -97,7 +86,7 @@ msgstr "Descripción"
 #. module: base_exception
 #: model:ir.model.fields,field_description:base_exception.field_exception_rule__display_name
 msgid "Display Name"
-msgstr "Nombre a mostrar"
+msgstr "Nombre para mostrar"
 
 #. module: base_exception
 #: model:ir.model.fields,field_description:base_exception.field_exception_rule__domain
@@ -219,11 +208,6 @@ msgid "Is Blocking"
 msgstr "Está bloqueando"
 
 #. module: base_exception
-#: model:ir.model.fields,field_description:base_exception.field_exception_rule____last_update
-msgid "Last Modified on"
-msgstr "Última actualización por"
-
-#. module: base_exception
 #: model:ir.model.fields,field_description:base_exception.field_exception_rule__write_uid
 msgid "Last Updated by"
 msgstr "Última actualización por"
@@ -231,7 +215,7 @@ msgstr "Última actualización por"
 #. module: base_exception
 #: model:ir.model.fields,field_description:base_exception.field_exception_rule__write_date
 msgid "Last Updated on"
-msgstr "Última actualización el"
+msgstr "Última actualización en"
 
 #. module: base_exception
 #: model:ir.model.fields,field_description:base_exception.field_base_exception__main_exception_id
@@ -278,20 +262,12 @@ msgstr ""
 #. module: base_exception
 #: model:ir.model.fields,field_description:base_exception.field_exception_rule_confirm__related_model_id
 msgid "Related Model"
-msgstr "Modelo relacionado"
+msgstr "Creado en"
 
 #. module: base_exception
 #: model:ir.model.fields,field_description:base_exception.field_exception_rule__sequence
 msgid "Sequence"
 msgstr "Secuencia"
-
-#. module: base_exception
-#: model:ir.model.fields,field_description:base_exception.field_base_exception__smart_search
-#: model:ir.model.fields,field_description:base_exception.field_base_exception_method__smart_search
-#: model:ir.model.fields,field_description:base_exception.field_exception_rule__smart_search
-#: model:ir.model.fields,field_description:base_exception.field_exception_rule_confirm__smart_search
-msgid "Smart Search"
-msgstr "Búsqueda inteligente"
 
 #. module: base_exception
 #. odoo-python
@@ -310,8 +286,8 @@ msgid ""
 "There is a problem of configuration, python code, domain or method is "
 "missing to match the exception type."
 msgstr ""
-"Hay un problema de configuración, falta código python, dominio o método para "
-"que coincida con el tipo de excepción."
+"Hay un problema de configuración, falta código python, dominio o método para"
+" que coincida con el tipo de excepción."
 
 #. module: base_exception
 #: model_terms:ir.ui.view,arch_db:base_exception.view_exception_rule_form
@@ -336,3 +312,10 @@ msgstr "Cuando está marcada, la excepción no se puede ignorar"
 #: model_terms:ir.ui.view,arch_db:base_exception.view_exception_rule_confirm
 msgid "_Close"
 msgstr "_Cerrar"
+
+#. module: base_exception
+#. odoo-python
+#: code:addons/base_exception/models/base_exception.py:0
+#, python-format
+msgid "{'(Blocking exception)' if e.is_blocking else ''}</b></li>"
+msgstr "{'(Excepción de bloqueo)' if e.is_blocking else ''}</b></li>"
